@@ -2,7 +2,7 @@
 
 FileSelectionPanel.java
 
-File selection panel class.
+Class: file-selection panel.
 
 \*====================================================================*/
 
@@ -41,7 +41,6 @@ import java.io.File;
 import java.io.IOException;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -70,6 +69,8 @@ import uk.blankaspect.common.misc.FilenameSuffixFilter;
 import uk.blankaspect.common.misc.IFileImporter;
 import uk.blankaspect.common.misc.SystemUtils;
 
+import uk.blankaspect.common.os.OsUtils;
+
 import uk.blankaspect.common.string.StringUtils;
 
 import uk.blankaspect.ui.swing.action.KeyAction;
@@ -90,7 +91,7 @@ import uk.blankaspect.ui.swing.transfer.DataImporter;
 //----------------------------------------------------------------------
 
 
-// FILE SELECTION PANEL CLASS
+// CLASS: FILE-SELECTION PANEL
 
 
 public abstract class FileSelectionPanel
@@ -102,8 +103,8 @@ public abstract class FileSelectionPanel
 //  Constants
 ////////////////////////////////////////////////////////////////////////
 
-	private static final	int	LIST_CELL_VERTICAL_MARGIN	= 1;
-	private static final	int	LIST_CELL_HORIZONTAL_MARGIN	= 4;
+	private static final	int		LIST_CELL_VERTICAL_MARGIN	= 1;
+	private static final	int		LIST_CELL_HORIZONTAL_MARGIN	= 4;
 
 	private static final	char	FILE_SEPARATOR_CHAR	= '/';
 	private static final	String	FILE_SEPARATOR		= Character.toString(FILE_SEPARATOR_CHAR);
@@ -138,602 +139,51 @@ public abstract class FileSelectionPanel
 	};
 
 ////////////////////////////////////////////////////////////////////////
-//  Enumerated types
+//  Instance variables
 ////////////////////////////////////////////////////////////////////////
 
-
-	// SELECTION MODE
-
-
-	public enum Mode
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constants
-	////////////////////////////////////////////////////////////////////
-
-		FILES
-		(
-			true,
-			false,
-			false,
-			JFileChooser.FILES_ONLY,
-			SELECT_FILE_STR
-		),
-
-		FILES_RECURSIVE
-		(
-			true,
-			false,
-			true,
-			JFileChooser.FILES_AND_DIRECTORIES,
-			SELECT_FILE_OR_DIRECTORY_STR
-		),
-
-		DIRECTORIES
-		(
-			false,
-			true,
-			false,
-			JFileChooser.DIRECTORIES_ONLY,
-			SELECT_DIRECTORY_STR
-		),
-
-		DIRECTORIES_RECURSIVE
-		(
-			false,
-			true,
-			true,
-			JFileChooser.FILES_AND_DIRECTORIES,
-			SELECT_FILE_OR_DIRECTORY_STR
-		),
-
-		FILES_AND_DIRECTORIES
-		(
-			true,
-			true,
-			false,
-			JFileChooser.FILES_AND_DIRECTORIES,
-			SELECT_FILE_OR_DIRECTORY_STR
-		),
-
-		FILES_AND_DIRECTORIES_RECURSIVE
-		(
-			true,
-			true,
-			true,
-			JFileChooser.FILES_AND_DIRECTORIES,
-			SELECT_FILE_OR_DIRECTORY_STR
-		);
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		private Mode(boolean files,
-					 boolean directories,
-					 boolean recursive,
-					 int     fileChooserMode,
-					 String  selectionText)
-		{
-			this.files = files;
-			this.directories = directories;
-			this.recursive = recursive;
-			this.fileChooserMode = fileChooserMode;
-			this.selectionText = selectionText;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		private	boolean	files;
-		private	boolean	directories;
-		private	boolean	recursive;
-		private	int		fileChooserMode;
-		private	String	selectionText;
-
-	}
-
-	//==================================================================
-
-
-	// PATHNAME KIND
-
-
-	public enum PathnameKind
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constants
-	////////////////////////////////////////////////////////////////////
-
-		NORMAL
-		(
-			"normal",
-			Color.BLACK
-		),
-
-		RELATIVE
-		(
-			"relative",
-			new Color(0, 0, 160)
-		);
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		private PathnameKind(String text,
-							 Color  textColour)
-		{
-			this.text = text;
-			this.textColour = textColour;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : overriding methods
-	////////////////////////////////////////////////////////////////////
-
-		@Override
-		public String toString()
-		{
-			return text;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods
-	////////////////////////////////////////////////////////////////////
-
-		public PathnameKind getOther()
-		{
-			return ((this == NORMAL) ? RELATIVE : NORMAL);
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		private	String	text;
-		private	Color	textColour;
-
-	}
-
-	//==================================================================
-
-
-	// ERROR IDENTIFIERS
-
-
-	private enum ErrorId
-		implements AppException.IId
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constants
-	////////////////////////////////////////////////////////////////////
-
-		FILE_TRANSFER_NOT_SUPPORTED
-		("File transfer is not supported."),
-
-		ERROR_TRANSFERRING_DATA
-		("An error occurred while transferring data."),
-
-		CLIPBOARD_IS_UNAVAILABLE
-		("The clipboard is currently unavailable."),
-
-		NO_TEXT_ON_CLIPBOARD
-		("There is no text on the clipboard."),
-
-		FAILED_TO_GET_CLIPBOARD_DATA
-		("Failed to get data from the clipboard."),
-
-		FAILED_TO_LIST_DIRECTORY_ENTRIES
-		("Failed to get a list of directory entries.");
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		private ErrorId(String message)
-		{
-			this.message = message;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : AppException.IId interface
-	////////////////////////////////////////////////////////////////////
-
-		public String getMessage()
-		{
-			return message;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		private	String	message;
-
-	}
-
-	//==================================================================
-
-////////////////////////////////////////////////////////////////////////
-//  Member classes : non-inner classes
-////////////////////////////////////////////////////////////////////////
-
-
-	// FILE LIST MODEL CLASS
-
-
-	private static class FileListModel
-		implements ListModel<SelectedFile>
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		private FileListModel()
-		{
-			files = new ArrayList<>();
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : ListModel interface
-	////////////////////////////////////////////////////////////////////
-
-		public SelectedFile getElementAt(int index)
-		{
-			return files.get(index);
-		}
-
-		//--------------------------------------------------------------
-
-		public int getSize()
-		{
-			return files.size();
-		}
-
-		//--------------------------------------------------------------
-
-		public void addListDataListener(ListDataListener listener)
-		{
-			if (listeners == null)
-				listeners = new ArrayList<>();
-			listeners.add(listener);
-		}
-
-		//--------------------------------------------------------------
-
-		public void removeListDataListener(ListDataListener listener)
-		{
-			if (listeners != null)
-				listeners.remove(listener);
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods
-	////////////////////////////////////////////////////////////////////
-
-		private void add(SelectedFile file)
-		{
-			if (!files.contains(file))
-			{
-				files.add(file);
-				changed = true;
-			}
-		}
-
-		//--------------------------------------------------------------
-
-		private void remove(int index)
-		{
-			files.remove(index);
-			changed = true;
-		}
-
-		//--------------------------------------------------------------
-
-		private void clear()
-		{
-			files.clear();
-			changed = true;
-		}
-
-		//--------------------------------------------------------------
-
-		private void update()
-		{
-			if (changed)
-			{
-				files.sort(null);
-				ListDataEvent event = new ListDataEvent(this, ListDataEvent.CONTENTS_CHANGED, 0, files.size() - 1);
-				for (int i = listeners.size() - 1; i >= 0; i--)
-					listeners.get(i).contentsChanged(event);
-				changed = false;
-			}
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		private	List<SelectedFile>		files;
-		private	List<ListDataListener>	listeners;
-		private	boolean					changed;
-
-	}
-
-	//==================================================================
-
-
-	// CORNER CLASS
-
-
-	private static class Corner
-		extends JComponent
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constants
-	////////////////////////////////////////////////////////////////////
-
-		private static final	Color	SELECTED_BACKGROUND_COLOUR	= new Color(248, 156, 32);
-		private static final	Color	SELECTED_BORDER_COLOUR		= new Color(192, 112, 0);
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		public Corner()
-		{
-			setOpaque(true);
-			setFocusable(false);
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : overriding methods
-	////////////////////////////////////////////////////////////////////
-
-		@Override
-		protected void paintComponent(Graphics gr)
-		{
-			int width = getWidth();
-			int height = getHeight();
-			if (selected)
-			{
-				gr.setColor(SELECTED_BACKGROUND_COLOUR);
-				gr.fillRect(2, 2, width - 4, height - 4);
-				gr.setColor(SELECTED_BORDER_COLOUR);
-				gr.drawRect(1, 1, width - 3, height - 3);
-				gr.setColor(getBackground());
-				gr.drawRect(0, 0, width - 1, height - 1);
-			}
-			else
-			{
-				gr.setColor(getBackground());
-				gr.fillRect(0, 0, width, height);
-			}
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods
-	////////////////////////////////////////////////////////////////////
-
-		private void setSelected(boolean selected)
-		{
-			if (this.selected != selected)
-			{
-				this.selected = selected;
-				repaint();
-			}
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		private	boolean	selected;
-
-	}
-
-	//==================================================================
-
-////////////////////////////////////////////////////////////////////////
-//  Member classes : inner classes
-////////////////////////////////////////////////////////////////////////
-
-
-	// SELECTED FILE CLASS
-
-
-	public class SelectedFile
-		implements Comparable<SelectedFile>, SelectionList.ITooltipSource
-	{
-
-	////////////////////////////////////////////////////////////////////
-	//  Constants
-	////////////////////////////////////////////////////////////////////
-
-		private static final	char	SEPARATOR_CHAR	= '/';
-
-	////////////////////////////////////////////////////////////////////
-	//  Constructors
-	////////////////////////////////////////////////////////////////////
-
-		private SelectedFile(File   file,
-							 String relativePathname,
-							 String pathname)
-		{
-			this.file = file;
-			this.relativePathname = relativePathname;
-			this.pathname = pathname;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : Comparable interface
-	////////////////////////////////////////////////////////////////////
-
-		@Override
-		public int compareTo(SelectedFile selectedFile)
-		{
-			List<String> components1 = StringUtils.split(getPathname().replace(File.separatorChar, SEPARATOR_CHAR),
-														 SEPARATOR_CHAR);
-			List<String> components2 = StringUtils.split(selectedFile.getPathname()
-																		.replace(File.separatorChar, SEPARATOR_CHAR),
-														 SEPARATOR_CHAR);
-			boolean ignoreCase = (File.separatorChar == '\\');
-			int length = (components1.size() == components2.size())
-														? components1.size()
-														: Math.min(components1.size(), components2.size()) - 1;
-			int result = 0;
-			for (int i = 0; i < length; i++)
-			{
-				result = ignoreCase ? components1.get(i).compareToIgnoreCase(components2.get(i))
-									: components1.get(i).compareTo(components2.get(i));
-				if (result != 0)
-					break;
-			}
-			if (result == 0)
-				result = Integer.compare(components1.size(), components2.size());
-			return result;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : SelectionList.ITooltipSource interface
-	////////////////////////////////////////////////////////////////////
-
-		@Override
-		public String getTooltip()
-		{
-			return ((pathnameKind == null) ? null
-										   : (pathnameKind == PathnameKind.RELATIVE) ? pathname
-																					 : relativePathname);
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods : overriding methods
-	////////////////////////////////////////////////////////////////////
-
-		@Override
-		public boolean equals(Object obj)
-		{
-			return ((obj instanceof SelectedFile) &&
-					 getPathname().equals(((SelectedFile)obj).getPathname()));
-		}
-
-		//--------------------------------------------------------------
-
-		@Override
-		public int hashCode()
-		{
-			return getPathname().hashCode();
-		}
-
-		//--------------------------------------------------------------
-
-		@Override
-		public String toString()
-		{
-			return ((pathnameKind == PathnameKind.RELATIVE) ? relativePathname : pathname);
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance methods
-	////////////////////////////////////////////////////////////////////
-
-		private String getPathname()
-		{
-			String pathname = null;
-			try
-			{
-				pathname = file.getCanonicalPath();
-			}
-			catch (Exception e)
-			{
-				ExceptionUtils.printTopOfStack(e);
-				pathname = file.getAbsolutePath();
-			}
-			return pathname;
-		}
-
-		//--------------------------------------------------------------
-
-	////////////////////////////////////////////////////////////////////
-	//  Instance variables
-	////////////////////////////////////////////////////////////////////
-
-		public	File	file;
-		public	String	relativePathname;
-		private	String	pathname;
-
-	}
-
-	//==================================================================
+	private	Mode						mode;
+	private	PathnameKind				pathnameKind;
+	private	FileListModel				fileListModel;
+	private	SelectionList<SelectedFile>	fileList;
+	private	Corner						corner;
+	private	JScrollPane					fileListScrollPane;
+	private	JButton						removeButton;
+	private	JButton						pathnameKindButton;
+	private	JFileChooser				fileChooser;
+	private	JPopupMenu					contextMenu;
 
 ////////////////////////////////////////////////////////////////////////
 //  Constructors
 ////////////////////////////////////////////////////////////////////////
 
-	public FileSelectionPanel(int          listNumViewableColumns,
-							  int          listNumViewableRows,
-							  Mode         mode,
-							  PathnameKind pathnameKind,
-							  String       titleStr)
+	public FileSelectionPanel(
+		int				listNumViewableColumns,
+		int				listNumViewableRows,
+		Mode			mode,
+		PathnameKind	pathnameKind,
+		String			title)
 	{
-		this(listNumViewableColumns, listNumViewableRows, mode, pathnameKind, titleStr, null);
+		this(listNumViewableColumns, listNumViewableRows, mode, pathnameKind, title, null);
 	}
 
 	//------------------------------------------------------------------
 
-	public FileSelectionPanel(int                    listNumViewableColumns,
-							  int                    listNumViewableRows,
-							  Mode                   mode,
-							  PathnameKind           pathnameKind,
-							  String                 titleStr,
-							  FilenameSuffixFilter[] filenameFilters)
+	public FileSelectionPanel(
+		int						listNumViewableColumns,
+		int						listNumViewableRows,
+		Mode					mode,
+		PathnameKind			pathnameKind,
+		String					title,
+		FilenameSuffixFilter[]	filenameFilters)
 	{
 		// Initialise instance variables
 		this.mode = mode;
 		this.pathnameKind = pathnameKind;
 		fileListModel = new FileListModel();
 
-		fileChooser = new JFileChooser(SystemUtils.getUserHomePathname());
-		fileChooser.setDialogTitle(titleStr);
+		fileChooser = new JFileChooser(SystemUtils.userHomeDirectoryPathname());
+		fileChooser.setDialogTitle(title);
 		fileChooser.setFileSelectionMode(mode.fileChooserMode);
 		if ((filenameFilters != null) && (filenameFilters.length > 0))
 		{
@@ -749,8 +199,8 @@ public abstract class FileSelectionPanel
 		//----  File list
 
 		// File selection list
-		fileList = new SelectionList<>(listNumViewableColumns, listNumViewableRows,
-									   LIST_CELL_VERTICAL_MARGIN, LIST_CELL_HORIZONTAL_MARGIN);
+		fileList = new SelectionList<>(listNumViewableColumns, listNumViewableRows, LIST_CELL_VERTICAL_MARGIN,
+									   LIST_CELL_HORIZONTAL_MARGIN);
 		fileList.addFocusListener(this);
 		fileList.addListSelectionListener(this);
 		fileList.addMouseListener(this);
@@ -866,7 +316,7 @@ public abstract class FileSelectionPanel
 
 		// Remove keys from input map of components
 		for (KeyAction.KeyCommandPair keyCommand : KEY_COMMANDS)
-			InputMapUtils.removeFromInputMap(this, true, JComponent.WHEN_FOCUSED, keyCommand.keyStroke);
+			InputMapUtils.removeFromInputMap(this, true, JComponent.WHEN_FOCUSED, keyCommand.keyStroke());
 
 		// Add commands to action map
 		KeyAction.create(this, JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT, this, KEY_COMMANDS);
@@ -889,7 +339,9 @@ public abstract class FileSelectionPanel
 //  Instance methods : ActionListener interface
 ////////////////////////////////////////////////////////////////////////
 
-	public void actionPerformed(ActionEvent event)
+	@Override
+	public void actionPerformed(
+		ActionEvent	event)
 	{
 		try
 		{
@@ -936,7 +388,8 @@ public abstract class FileSelectionPanel
 	//------------------------------------------------------------------
 
 	@Override
-	public void importFiles(List<File> files)
+	public void importFiles(
+		List<File>	files)
 	{
 		addFiles(files);
 	}
@@ -947,14 +400,18 @@ public abstract class FileSelectionPanel
 //  Instance methods : FocusListener interface
 ////////////////////////////////////////////////////////////////////////
 
-	public void focusGained(FocusEvent event)
+	@Override
+	public void focusGained(
+		FocusEvent	event)
 	{
 		corner.setSelected(true);
 	}
 
 	//------------------------------------------------------------------
 
-	public void focusLost(FocusEvent event)
+	@Override
+	public void focusLost(
+		FocusEvent	event)
 	{
 		corner.setSelected(false);
 	}
@@ -965,7 +422,9 @@ public abstract class FileSelectionPanel
 //  Instance methods : ListSelectionListener interface
 ////////////////////////////////////////////////////////////////////////
 
-	public void valueChanged(ListSelectionEvent event)
+	@Override
+	public void valueChanged(
+		ListSelectionEvent	event)
 	{
 		removeButton.setEnabled(!fileList.isSelectionEmpty());
 	}
@@ -976,35 +435,45 @@ public abstract class FileSelectionPanel
 //  Instance methods : MouseListener interface
 ////////////////////////////////////////////////////////////////////////
 
-	public void mouseClicked(MouseEvent event)
+	@Override
+	public void mouseClicked(
+		MouseEvent	event)
 	{
 		// do nothing
 	}
 
 	//------------------------------------------------------------------
 
-	public void mouseEntered(MouseEvent event)
+	@Override
+	public void mouseEntered(
+		MouseEvent	event)
 	{
 		// do nothing
 	}
 
 	//------------------------------------------------------------------
 
-	public void mouseExited(MouseEvent event)
+	@Override
+	public void mouseExited(
+		MouseEvent	event)
 	{
 		// do nothing
 	}
 
 	//------------------------------------------------------------------
 
-	public void mousePressed(MouseEvent event)
+	@Override
+	public void mousePressed(
+		MouseEvent	event)
 	{
 		showContextMenu(event);
 	}
 
 	//------------------------------------------------------------------
 
-	public void mouseReleased(MouseEvent event)
+	@Override
+	public void mouseReleased(
+		MouseEvent	event)
 	{
 		showContextMenu(event);
 	}
@@ -1046,30 +515,34 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	public void setFiles(File[] files)
+	public void setFiles(
+		File[]	files)
 	{
-		setFiles(Arrays.asList(files), false);
+		setFiles(List.of(files), false);
 	}
 
 	//------------------------------------------------------------------
 
-	public void setFiles(File[]  files,
-						 boolean mustExist)
+	public void setFiles(
+		File[]	files,
+		boolean	mustExist)
 	{
-		setFiles(Arrays.asList(files), mustExist);
+		setFiles(List.of(files), mustExist);
 	}
 
 	//------------------------------------------------------------------
 
-	public void setFiles(List<File> files)
+	public void setFiles(
+		List<File>	files)
 	{
 		setFiles(files, false);
 	}
 
 	//------------------------------------------------------------------
 
-	public void setFiles(List<File> files,
-						 boolean    mustExist)
+	public void setFiles(
+		List<File>	files,
+		boolean		mustExist)
 	{
 		fileListModel.clear();
 		for (File file : files)
@@ -1084,7 +557,8 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	public void addFiles(Collection<File> files)
+	public void addFiles(
+		Collection<File>	files)
 	{
 		for (File file : files)
 			processFile(file, file.getName());
@@ -1093,37 +567,42 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	public void addListDataListener(ListDataListener listener)
+	public void addListDataListener(
+		ListDataListener	listener)
 	{
 		fileListModel.addListDataListener(listener);
 	}
 
 	//------------------------------------------------------------------
 
-	public void removeListDataListener(ListDataListener listener)
+	public void removeListDataListener(
+		ListDataListener	listener)
 	{
 		fileListModel.removeListDataListener(listener);
 	}
 
 	//------------------------------------------------------------------
 
-	protected String fileToPathname(File file)
+	protected String fileToPathname(
+		File	file)
 	{
 		return file.getAbsolutePath();
 	}
 
 	//------------------------------------------------------------------
 
-	protected String pathnameKindToString(PathnameKind pathnameKind,
-										  boolean      title)
+	protected String pathnameKindToString(
+		PathnameKind	pathnameKind,
+		boolean			title)
 	{
-		return (title ? StringUtils.firstCharToUpperCase(pathnameKind.text) : pathnameKind.text);
+		return title ? StringUtils.firstCharToUpperCase(pathnameKind.text) : pathnameKind.text;
 	}
 
 	//------------------------------------------------------------------
 
-	protected void addFiles(File   directory,
-							String relativePathname)
+	protected void addFiles(
+		File	directory,
+		String	relativePathname)
 	{
 		try
 		{
@@ -1152,8 +631,9 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	private void processFile(File   file,
-							 String relativePathname)
+	private void processFile(
+		File	file,
+		String	relativePathname)
 	{
 		if (file.isFile())
 		{
@@ -1171,8 +651,9 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	private void addFile(File   file,
-						 String relativePathname)
+	private void addFile(
+		File	file,
+		String	relativePathname)
 	{
 		fileListModel.add(new SelectedFile(file, relativePathname, fileToPathname(file)));
 	}
@@ -1186,7 +667,8 @@ public abstract class FileSelectionPanel
 
 	//------------------------------------------------------------------
 
-	private void showContextMenu(MouseEvent event)
+	private void showContextMenu(
+		MouseEvent	event)
 	{
 		if (event.isPopupTrigger())
 		{
@@ -1220,7 +702,7 @@ public abstract class FileSelectionPanel
 		fileChooser.rescanCurrentDirectory();
 		if (fileChooser.showDialog(GuiUtils.getWindow(this), SELECT_STR) == JFileChooser.APPROVE_OPTION)
 		{
-			addFiles(Arrays.asList(fileChooser.getSelectedFiles()));
+			addFiles(List.of(fileChooser.getSelectedFiles()));
 			fileListModel.update();
 		}
 	}
@@ -1279,19 +761,594 @@ public abstract class FileSelectionPanel
 	//------------------------------------------------------------------
 
 ////////////////////////////////////////////////////////////////////////
-//  Instance variables
+//  Enumerated types
 ////////////////////////////////////////////////////////////////////////
 
-	private	Mode						mode;
-	private	PathnameKind				pathnameKind;
-	private	FileListModel				fileListModel;
-	private	SelectionList<SelectedFile>	fileList;
-	private	Corner						corner;
-	private	JScrollPane					fileListScrollPane;
-	private	JButton						removeButton;
-	private	JButton						pathnameKindButton;
-	private	JFileChooser				fileChooser;
-	private	JPopupMenu					contextMenu;
+
+	// ENUMERATION: SELECTION MODE
+
+
+	public enum Mode
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Constants
+	////////////////////////////////////////////////////////////////////
+
+		FILES
+		(
+			true,
+			false,
+			false,
+			JFileChooser.FILES_ONLY,
+			SELECT_FILE_STR
+		),
+
+		FILES_RECURSIVE
+		(
+			true,
+			false,
+			true,
+			JFileChooser.FILES_AND_DIRECTORIES,
+			SELECT_FILE_OR_DIRECTORY_STR
+		),
+
+		DIRECTORIES
+		(
+			false,
+			true,
+			false,
+			JFileChooser.DIRECTORIES_ONLY,
+			SELECT_DIRECTORY_STR
+		),
+
+		DIRECTORIES_RECURSIVE
+		(
+			false,
+			true,
+			true,
+			JFileChooser.FILES_AND_DIRECTORIES,
+			SELECT_FILE_OR_DIRECTORY_STR
+		),
+
+		FILES_AND_DIRECTORIES
+		(
+			true,
+			true,
+			false,
+			JFileChooser.FILES_AND_DIRECTORIES,
+			SELECT_FILE_OR_DIRECTORY_STR
+		),
+
+		FILES_AND_DIRECTORIES_RECURSIVE
+		(
+			true,
+			true,
+			true,
+			JFileChooser.FILES_AND_DIRECTORIES,
+			SELECT_FILE_OR_DIRECTORY_STR
+		);
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		private	boolean	files;
+		private	boolean	directories;
+		private	boolean	recursive;
+		private	int		fileChooserMode;
+		private	String	selectionText;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		private Mode(
+			boolean	files,
+			boolean	directories,
+			boolean	recursive,
+			int		fileChooserMode,
+			String	selectionText)
+		{
+			this.files = files;
+			this.directories = directories;
+			this.recursive = recursive;
+			this.fileChooserMode = fileChooserMode;
+			this.selectionText = selectionText;
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
+
+
+	// ENUMERATION: KIND OF PATHNAME
+
+
+	public enum PathnameKind
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Constants
+	////////////////////////////////////////////////////////////////////
+
+		NORMAL
+		(
+			"normal",
+			Color.BLACK
+		),
+
+		RELATIVE
+		(
+			"relative",
+			new Color(0, 0, 160)
+		);
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		private	String	text;
+		private	Color	textColour;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		private PathnameKind(
+			String	text,
+			Color	textColour)
+		{
+			this.text = text;
+			this.textColour = textColour;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : overriding methods
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public String toString()
+		{
+			return text;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods
+	////////////////////////////////////////////////////////////////////
+
+		public PathnameKind getOther()
+		{
+			return (this == NORMAL) ? RELATIVE : NORMAL;
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
+
+
+	// ENUMERATION: ERROR IDENTIFIERS
+
+
+	private enum ErrorId
+		implements AppException.IId
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Constants
+	////////////////////////////////////////////////////////////////////
+
+		FILE_TRANSFER_NOT_SUPPORTED
+		("File transfer is not supported."),
+
+		ERROR_TRANSFERRING_DATA
+		("An error occurred while transferring data."),
+
+		CLIPBOARD_IS_UNAVAILABLE
+		("The clipboard is currently unavailable."),
+
+		NO_TEXT_ON_CLIPBOARD
+		("There is no text on the clipboard."),
+
+		FAILED_TO_GET_CLIPBOARD_DATA
+		("Failed to get data from the clipboard."),
+
+		FAILED_TO_LIST_DIRECTORY_ENTRIES
+		("Failed to get a list of directory entries.");
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		private	String	message;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		private ErrorId(
+			String	message)
+		{
+			this.message = message;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : AppException.IId interface
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public String getMessage()
+		{
+			return message;
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
+
+////////////////////////////////////////////////////////////////////////
+//  Member classes : non-inner classes
+////////////////////////////////////////////////////////////////////////
+
+
+	// CLASS: FILE-LIST MODEL
+
+
+	private static class FileListModel
+		implements ListModel<SelectedFile>
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		private	List<SelectedFile>		files;
+		private	List<ListDataListener>	listeners;
+		private	boolean					changed;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		private FileListModel()
+		{
+			files = new ArrayList<>();
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : ListModel interface
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public SelectedFile getElementAt(
+			int	index)
+		{
+			return files.get(index);
+		}
+
+		//--------------------------------------------------------------
+
+		@Override
+		public int getSize()
+		{
+			return files.size();
+		}
+
+		//--------------------------------------------------------------
+
+		@Override
+		public void addListDataListener(
+			ListDataListener	listener)
+		{
+			if (listeners == null)
+				listeners = new ArrayList<>();
+			listeners.add(listener);
+		}
+
+		//--------------------------------------------------------------
+
+		@Override
+		public void removeListDataListener(
+			ListDataListener	listener)
+		{
+			if (listeners != null)
+				listeners.remove(listener);
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods
+	////////////////////////////////////////////////////////////////////
+
+		private void add(
+			SelectedFile	file)
+		{
+			if (!files.contains(file))
+			{
+				files.add(file);
+				changed = true;
+			}
+		}
+
+		//--------------------------------------------------------------
+
+		private void remove(
+			int	index)
+		{
+			files.remove(index);
+			changed = true;
+		}
+
+		//--------------------------------------------------------------
+
+		private void clear()
+		{
+			files.clear();
+			changed = true;
+		}
+
+		//--------------------------------------------------------------
+
+		private void update()
+		{
+			if (changed)
+			{
+				files.sort(null);
+				ListDataEvent event = new ListDataEvent(this, ListDataEvent.CONTENTS_CHANGED, 0, files.size() - 1);
+				for (int i = listeners.size() - 1; i >= 0; i--)
+					listeners.get(i).contentsChanged(event);
+				changed = false;
+			}
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
+
+
+	// CLASS: CORNER
+
+
+	private static class Corner
+		extends JComponent
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Constants
+	////////////////////////////////////////////////////////////////////
+
+		private static final	Color	SELECTED_BACKGROUND_COLOUR	= new Color(248, 156, 32);
+		private static final	Color	SELECTED_BORDER_COLOUR		= new Color(192, 112, 0);
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		private	boolean	selected;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		public Corner()
+		{
+			setOpaque(true);
+			setFocusable(false);
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : overriding methods
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		protected void paintComponent(
+			Graphics	gr)
+		{
+			int width = getWidth();
+			int height = getHeight();
+			if (selected)
+			{
+				gr.setColor(SELECTED_BACKGROUND_COLOUR);
+				gr.fillRect(2, 2, width - 4, height - 4);
+				gr.setColor(SELECTED_BORDER_COLOUR);
+				gr.drawRect(1, 1, width - 3, height - 3);
+				gr.setColor(getBackground());
+				gr.drawRect(0, 0, width - 1, height - 1);
+			}
+			else
+			{
+				gr.setColor(getBackground());
+				gr.fillRect(0, 0, width, height);
+			}
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods
+	////////////////////////////////////////////////////////////////////
+
+		private void setSelected(
+			boolean	selected)
+		{
+			if (this.selected != selected)
+			{
+				this.selected = selected;
+				repaint();
+			}
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
+
+////////////////////////////////////////////////////////////////////////
+//  Member classes : inner classes
+////////////////////////////////////////////////////////////////////////
+
+
+	// CLASS: SELECTED FILE
+
+
+	public class SelectedFile
+		implements Comparable<SelectedFile>, SelectionList.ITooltipSource
+	{
+
+	////////////////////////////////////////////////////////////////////
+	//  Constants
+	////////////////////////////////////////////////////////////////////
+
+		private static final	char	SEPARATOR_CHAR	= '/';
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance variables
+	////////////////////////////////////////////////////////////////////
+
+		public	File	file;
+		public	String	relativePathname;
+		private	String	pathname;
+
+	////////////////////////////////////////////////////////////////////
+	//  Constructors
+	////////////////////////////////////////////////////////////////////
+
+		private SelectedFile(
+			File	file,
+			String	relativePathname,
+			String	pathname)
+		{
+			this.file = file;
+			this.relativePathname = relativePathname;
+			this.pathname = pathname;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : Comparable interface
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public int compareTo(
+			SelectedFile	selectedFile)
+		{
+			List<String> components1 =
+					StringUtils.split(getPathname().replace(File.separatorChar, SEPARATOR_CHAR), SEPARATOR_CHAR);
+			List<String> components2 =
+					StringUtils.split(selectedFile.getPathname().replace(File.separatorChar, SEPARATOR_CHAR),
+									  SEPARATOR_CHAR);
+			boolean ignoreCase = OsUtils.isWindows();
+			int length = (components1.size() == components2.size())
+														? components1.size()
+														: Math.min(components1.size(), components2.size()) - 1;
+			int result = 0;
+			for (int i = 0; i < length; i++)
+			{
+				result = ignoreCase ? components1.get(i).compareToIgnoreCase(components2.get(i))
+									: components1.get(i).compareTo(components2.get(i));
+				if (result != 0)
+					break;
+			}
+			if (result == 0)
+				result = Integer.compare(components1.size(), components2.size());
+			return result;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : SelectionList.ITooltipSource interface
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public String getTooltip()
+		{
+			return (pathnameKind == null)
+							? null
+							: (pathnameKind == PathnameKind.RELATIVE)
+									? pathname
+									: relativePathname;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods : overriding methods
+	////////////////////////////////////////////////////////////////////
+
+		@Override
+		public boolean equals(
+			Object	obj)
+		{
+			if (this == obj)
+				return true;
+
+			return (obj instanceof SelectedFile other) && getPathname().equals(other.getPathname());
+		}
+
+		//--------------------------------------------------------------
+
+		@Override
+		public int hashCode()
+		{
+			return getPathname().hashCode();
+		}
+
+		//--------------------------------------------------------------
+
+		@Override
+		public String toString()
+		{
+			return (pathnameKind == PathnameKind.RELATIVE) ? relativePathname : pathname;
+		}
+
+		//--------------------------------------------------------------
+
+	////////////////////////////////////////////////////////////////////
+	//  Instance methods
+	////////////////////////////////////////////////////////////////////
+
+		private String getPathname()
+		{
+			String pathname = null;
+			try
+			{
+				pathname = file.getCanonicalPath();
+			}
+			catch (Exception e)
+			{
+				ExceptionUtils.printTopOfStack(e);
+				pathname = file.getAbsolutePath();
+			}
+			return pathname;
+		}
+
+		//--------------------------------------------------------------
+
+	}
+
+	//==================================================================
 
 }
 
